@@ -8,6 +8,7 @@
     - Internal default key bindings are honored again
     - Default key bindings for "Find unlinked files" (shift F7), "Open folder" (ctrl shift O), and "Hide/show toolbar" (ctrl alt t)
     - Opening a file using the CLI works again. Just use the filename as parameter, without any command.
+    - Emacs keybindings: CTRL+f is not rebound as CTRL+f is more often used for "search"
 2.11 beta 2
     - Feature: Option to clean URLs generated by Google (patch #204)
     - Fix for bug #1272: JabRef now launches on Mac OS X
